--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^2.2.19",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1"
   },
