--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/esaldivar/PierresStorePython#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
@@ -28,6 +32,7 @@
     "postcss-loader": "^6.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1"
   },
