--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mock store based off of Pierre's Store from Stardew Valley",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -34,11 +35,14 @@
     "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4",
     "webpack": "^5.63.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
