--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0"
   },
   "proxy": "http://localhost:5000"
 }
