--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
