--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "lint": "eslint --fix \"./client/**/*.{js,jsx,ts,tsx,json}\"",
     "test": "jest --verbose"
   },
+  "husky": {
+    "hooks":{
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged":{
+    "*.js": ["eslint", "prettier --write"],
+    "*.ts": ["eslint", "prettier --write"],
+    "*.jsx": ["eslint", "prettier --write"],
+    "*.tsx": ["eslint", "prettier --write"],
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/esaldivar/PierresStorePython.git"
@@ -42,7 +53,9 @@
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "lint-staged": "^12.0.2",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
     "prettier": "^2.4.1",
