--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     }
   },
   "lint-staged":{
-    "*.js": ["eslint", "prettier --write"],
-    "*.ts": ["eslint", "prettier --write"],
-    "*.jsx": ["eslint", "prettier --write"],
-    "*.tsx": ["eslint", "prettier --write"],
+    "*.js": ["eslint --fix", "git add"],
+    "*.ts": ["eslint --fix", "git add"],
+    "*.jsx": ["eslint --fix", "git add"],
+    "*.tsx": ["eslint --fix", "git add"],
   },
   "repository": {
     "type": "git",
