--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "dev": "webpack serve --echo \"Error: no test specified\" && exit 1open",
     "format": "prettier --write \"./client/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint": "eslint --fix \"./client/**/*.{js,jsx,ts,tsx,json}\"",
-    "test": "jest --verbose",
-    "prepare": "husky install"
+    "test": "jest --verbose"
   },
   "husky": {
     "hooks":{
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint && git add -A"
     } 
   },
   "lint-staged": {
     "./client/**/*.{js,jsx,ts,tsx,json}": [
-      "npm run lint"
+      "npm run lint",
+      "npm run format"
     ]
   },
   "repository": {
