--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "husky": {
     "hooks":{
-      "pre-commit": "npm run lint && git add -A"
+      "pre-commit": "lint-staged"
     } 
   },
   "lint-staged": {
     "./client/**/*.{js,jsx,ts,tsx,json}": [
       "npm run lint",
-      "npm run format"
+      "git add"
     ]
   },
   "repository": {
