--- a/package.json
+++ b/package.json
@@ -7,18 +7,8 @@
     "dev": "webpack serve --echo \"Error: no test specified\" && exit 1open",
     "format": "prettier --write \"./client/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint": "eslint --fix \"./client/**/*.{js,jsx,ts,tsx,json}\"",
-    "test": "jest --verbose"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "./client/**/*.{js,jsx,ts,tsx,json}": [
-      "npm run lint",
-      "git add"
-    ]
+    "test": "jest --verbose",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -53,7 +43,7 @@
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "jest": "^27.3.1",
     "lint-staged": "^12.0.2",
     "postcss": "^8.3.11",
