react testing library works

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "mock store based off of Pierre's Store from Stardew Valley",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --echo \"Error: no test specified\" && exit 1open",
+    "dev": "webpack serve --open",
     "format": "prettier --write \"./client/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint": "eslint --fix \"./client/**/*.{js,jsx,ts,tsx,json}\"",
-    "test": "jest --verbose",
-    "prepare": "husky install"
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
