configured jest in the package json to accept css and images

--- a/package.json
+++ b/package.json
@@ -70,5 +70,18 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0"
   },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "moduleDirectories": [
+      "node_modules",
+      "utils",
+     "__dirname"
+    ],
+
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "./__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "proxy": "http://localhost:5000"
 }
