--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0"
   },
@@ -75,9 +76,8 @@
     "moduleDirectories": [
       "node_modules",
       "utils",
-     "__dirname"
+      "__dirname"
     ],
-
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "./__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
