testing with yarn yarn install --frozen-lockfile in github ci

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,6 +13,6 @@ jobs:
         - uses: actions/setup-node@v1
           with:
             node-version: 15
-        - run: npm ci
+        - run: yarn install --frozen-lockfile
         - run: npm test
         - run: npm run build
