--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 	  "resolveJsonModule": true,
 	  // "allowJs": true /* Allow javascript files to be compiled. Useful when migrating JS to TS */,
 	  // "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
+	  "downlevelIteration": true,
 	  "paths": {
 		"test-utils": ["./utils/test-utils"]
 	  }
